# siglauncher

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: backend.rs  downloader.rs  launcher.rs  main.rs  theme.rs
src/backend/: installer.rs  version_installer.rs
