[package]
name = "siglauncher"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.17"
tokio = {version="1", features=["full"]}
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
zip = "0.6.4"
webbrowser = "0.8.9"
iced = {version = "0.9.0", features = ["svg", "image", "glow"]}
image = "0.24.6"
