[package]
name = "siglauncher"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
tokio = {version="1", features=["full"]}
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
zip = "0.6.6"
webbrowser = "0.8.10"
iced = {version = "0.9.0", features = ["svg", "image", "glow"]}
image = "0.24.6"
open = "5.0.0"
