[package]
name = "siglauncher"
version = "0.5.2"
edition = "2021"
authors = ["JafKc"]
repository = "https://github.com/JafKc/siglauncher"

[dependencies]
iced = {version = "0.10.0", features = ["tokio", "svg"]}
reqwest = {version = "0.11.18"}
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
open = "5.0.0"
zip = "0.6.6"